# langgraph-tax-agent

./: .gitignore  1.langchain_vs_langgraph.ipynb  pyproject.toml
00-learning-path/: 1. langgraph_basic.ipynb  2. retrieval.ipynb  4. self-rag.ipynb  5. corrective-rag.ipynb  5. retry-count.ipynb  6. corrective-rag.ipynb  9. multi-agent.ipynb
01-workflow/: 1. langgraph_basic.ipynb  2. retrieval.ipynb  3. conditional_edge.ipynb  4. self-rag.ipynb  5. retry-count.ipynb  6. corrective-rag.ipynb  7. adaptive-rag.ipynb  8. parallel.ipynb  income_tax_graph.py  real_estate_tax_graph.py
02-agent/: 1. langchain_tools.ipynb  5. human_in_the_loop.ipynb  6. stock-multi-agent.ipynb
1. llm_workflow_with_langgraph/: 1. langgraph_basic.ipynb  2. retrieval.ipynb  3. rewrite.ipynb
