[project]
name = "inflearn-langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html2text>=2025.4.15",
    "ipykernel>=7.1.0",
    "langchain>=1.2.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "markdown>=3.10.1",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.2",
    "py-zerox>=0.0.7",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
]
